--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Restaurant menu</title>
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <header>
@@ -12,10 +13,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="Home">Home</a></li>
-                        <li><a href="Abo">About</a></li>
+                        <li><a href="home">Home</a></li>
+                        <li><a href="abo">About</a></li>
                         <li><a href="ing">Igredients</a></li>
-                        <li><a href="Men">Menu</a></li>
+                        <li><a href="men">Menu</a></li>
                         <li><a href="">Reviews</a></li>
                         <li><a href="">Reservations</a></li>
                         <li><a href=""><img src="" alt=""></a></li>
@@ -23,19 +24,19 @@
                 </nav>
             </div>
         </header>
-        <section id="Home" class="section-Home">
+        <section id="home" class="section-home">
             <div class="container">
                 <h1>the right ingredients for the right food</h1>
                 <img src="" alt="">
-                <div class="button">
-                    <button>BOOK A TABLE</button>
-                    <button>SEE THE MENU</button>
+                <div class="home-buttons">
+                    <button class="button button--dark">BOOK A TABLE</button>
+                    <button class="button button--light">SEE THE MENU</button>
                 </div>
             </div>
         </section>
-        <section id="Abo" class="section-About">
+        <section id="abo" class="section-about">
             <div class="container">
-                <div class="About-content">
+                <div class="about-content about-colume">
                     <h2>just the right food</h2>
                     <p>If you've been to one of our restaurants, you've seen - and
                         tasted - what keeps our customers coming back for more.
@@ -44,8 +45,8 @@
                         Stop in today and check us out!</p>
                         <img src="" alt="">
                 </div>
-                <div class="img....">
-                    <img src="" alt="">
+                <div class="about-img about-colume">
+                    <img class="img-responsive" src="" alt="">
                 </div>
             </div>
         </section>
@@ -66,87 +67,83 @@
                 </div>
             </div>
         </section>
-        <section id="Men" class="section-Menu">
+        <section id="men" class="section-menu">
             <div class="container">
                 <div class="menu-column">
                     <div class="menu-dishes">
                         <h2>Appetisers</h2>
                         <img src="" alt="">
-                        <div class="dishes">
-                            <p class="nomination">Tzatsiki</p><p class="nomination">$3.99</p>
-                            <img src="" alt="">
-                            <p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
-                        </div>
-                        <div class="dishes">
-                                <p class="nomination">Aubergine Salad</p><p class="nomination">$5.50</p>
-                                <img src="" alt="">
-                                <p>Pureed egplant, garlic, green pepper and tomato dip.</p>
-                        </div>
-                        <div class="dishes">
-                                <p class="nomination">Aubergine Salad</p><p class="nomination">$5.25</p>
-                                <img src="" alt="">
-                                <p>Pureed egplant, garlic, green pepper and tomato dip.</p>
+                        <div class="dishes-area">
+                            <div class="dishes">
+                                <p class="nomination">Tzatsiki</p><p class="price">$3.99</p>
+                                <p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                            </div>
+                            <div class="dishes">
+                                    <p class="nomination">Aubergine Salad</p><p class="price">$5.50</p>
+                                    <p>Pureed egplant, garlic, green pepper and tomato dip.</p>
+                            </div>
+                            <div class="dishes">
+                                    <p class="nomination">Aubergine Salad</p><p class="price">$5.25</p>
+                                    <p>Pureed egplant, garlic, green pepper and tomato dip.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="menu-dishes">
-                            <h2>Salads</h2>
-                            <img src="" alt="">
+                        <h2>Salads</h2>
+                        <img src="" alt="">
+                        <div class="dishes-area">
                             <div class="dishes">
-                                <p class="nomination">Olive Special</p><p class="nomination">$5.99</p>
-                                <img src="" alt="">
+                                <p class="nomination">Olive Special</p><p class="price">$5.99</p>
                                 <p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
                             </div>
                             <div class="dishes">
                             <!-- как в css "в картинке" (то что товар рекомендуется) расместить блюдо? -->
-                                    <p class="nomination">Greek Salad</p><p class="nomination">$5.50</p>
-                                    <img src="" alt="">
+                                    <p class="nomination">Greek Salad</p><p class="price">$5.50</p>
                                     <p>Pureed egplant, garlic, green pepper and tomato dip.</p>
                             </div>
                             <div class="dishes">
-                                    <p class="nomination">Gusto Salad</p><p class="nomination">$5.25</p>
-                                    <img src="" alt="">
+                                    <p class="nomination">Gusto Salad</p><p class="price">$5.25</p>
                                     <p>Pureed egplant, garlic, green pepper and tomato dip.</p>
                             </div>
                         </div>
+                    </div>
                 </div>
                 <div class="menu-column">
                     <div class="menu-dishes">
                         <h2>Starters</h2>
                         <img src="" alt="">
-                        <div class="dishes">
-                            <p class="nomination">Haloumi</p><p class="nomination">$3.99</p>
-                            <img src="" alt="">
-                            <p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
-                        </div>
-                        <div class="dishes">
-                                <p class="nomination">Spinach Pie</p><p class="nomination">$5.50</p>
-                                <img src="" alt="">
-                                <p>Pureed egplant, garlic, green pepper and tomato dip.</p>
+                        <div class="dishes-area">
+                            <div class="dishes">
+                                <p class="nomination">Haloumi</p><p class="price">$3.99</p>
+                                <p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                            </div>
+                            <div class="dishes">
+                                    <p class="nomination">Spinach Pie</p><p class="price">$5.50</p>
+                                    <p>Pureed egplant, garlic, green pepper and tomato dip.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="menu-dishes">
                         <h2>Main Dishes</h2>
                         <img src="" alt="">
-                        <div class="dishes">
-                            <p class="nomination">Cornish Mackerel</p><p class="nomination">$5.99</p>
-                            <img src="" alt="">
-                            <p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
-                        </div>
-                        <div class="dishes">
-                            <!-- как в css "в картинке" (то что товар рекомендуется) расместить блюдо? -->
-                                <p class="nomination">Roast Lamb</p><p class="nomination">$5.50</p>
-                                <img src="" alt="">
-                                <p>Pureed egplant, garlic, green pepper and tomato dip.</p>
-                        </div>
-                        <div class="dishes">
-                                <p class="nomination">Fried Chicken</p><p class="nomination">$5.25</p>
-                                <img src="" alt="">
-                                <p>Pureed egplant, garlic, green pepper and tomato dip.</p>
-                        </div>
-                        <div class="dishes">
-                                <p class="nomination">Pastitsio</p><p class="nomination">$5.99</p>
-                                <img src="" alt="">
+                        <div class="dishes-area">
+                            <div class="dishes">
+                                <p class="nomination">Cornish Mackerel</p><p class="price">$5.99</p>
                                 <p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                            </div>
+                            <div class="dishes">
+                                <!-- как в css "в картинке" (то что товар рекомендуется) расместить блюдо? -->
+                                    <p class="nomination">Roast Lamb</p><p class="price">$5.50</p>
+                                    <p>Pureed egplant, garlic, green pepper and tomato dip.</p>
+                            </div>
+                            <div class="dishes">
+                                    <p class="nomination">Fried Chicken</p><p class="price">$5.25</p>
+                                    <p>Pureed egplant, garlic, green pepper and tomato dip.</p>
+                            </div>
+                            <div class="dishes">
+                                    <p class="nomination">Pastitsio</p><p class="price">$5.99</p>
+                                    <p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -156,13 +153,13 @@
             <div class="container">
                 <div class="quote">
                     <h2>Guest Reviews</h2>
+                    <img src="" alt="">
                     <p>If you've been to one of our restaurants, you've seen -
                         and tasted - what keeps our customers coming back for
                         more. Perfect materials and freshly baked food,
                         delicious Lambda cakes, muffins, and gourmet coffees
-                        make us hard to resist! Stop in today and check us out!
-                    </p>
-                    <p>-food inc, New York</p>
+                        make us hard to resist! Stop in today and check us out!</p>
+                    <p class="signature">-food inc, New York</p>
                 </div>
             </div>
         </section>
@@ -180,26 +177,34 @@
                     <p>Delicious Lambda cakes, muffins, and gourmet coffees make
                         us hard to resist! Stop in today and check us out! Perfect
                         materials and freshly baked food.</p>
-                        <form action="" method="POST">
-                            <label>Name<input type="text" name="name" value="your name*"></label>
-                        </form>
-                        <form action="" method="POST">
-                            <label>Name<input type="text" name="email" value="your email*"></label>
-                        </form>
-                        <form action="" method="POST">
-                            <label>Date<input type="text" name="date" value="date*"></label>
-                            <!-- Как вставить иконку календаря в поле? -->
-                        </form>
-                        <form action="" method="POST">
-                            <label>Party number<input type="text" name="number" value="party number"></label>
-                        </form>
-                        <button>Book now!</button>
+                    <form>
+                        <div class="field field-name">
+                            <label for="name">Name</label>
+                            <input id="name" type="text" name="name" value="your name*">
+                        </div>
+                        <div class="field field-email">
+                            <label for="email">Name</label>
+                            <input id="email" type="email" name="email" value="your email*">
+                        </div>
+                        <div class="field field-date">
+                            <label for="date">Date</label>
+                            <input id="date" type="date" name="date" value="date*">
+                        </div>
+                        <!-- Как вставить иконку календаря в поле? -->
+                        <div class="field field-date">
+                            <label for="number">Party number</label>
+                            <input id="number" type="text" name="number" value="party number">
+                        </div>
+                    </form>
+                    <form>
+                        <button type="submit">Book now!</button>
+                    </form>
                 </div>
             </div>
         </section>
         <footer>
             <div class="footer-column">
-                <h3>About Us</h3>
+                <h3 class="h-size">About Us</h3>
                 <img src="" alt="">
                 <p>Lambda's and expanded Chelsea location
                     represents a truly authentic Greek patisserie,
@@ -208,14 +213,14 @@
                     Lamda the best restautant in town</p>
             </div>
             <div class="footer-column">
-                <h3>Opening Hours</h3>
+                <h3 class="h-size">Opening Hours</h3>
                 <img src="" alt="">
                 <p>Mon-Thu: 7:00am-8:00pm
                     Fri-Sun: 7:00am-10:00pm</p>
                 <img src="" alt="">
             </div>
             <div class="footer-column">
-                <h3>Our Location</h3>
+                <h3 class="h-size">Our Location</h3>
                 <img src="" alt="">
                 <p>19th Paradise Street Sitia
                     128 Meserole Avenue</p>
