правки по ревью

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <div class="container">
                 <div class="logo">
-                    <img src="" alt="">
+                    <img src="image/Logo.png" alt="logotype">
                 </div>
                 <nav>
                     <ul>
@@ -19,60 +19,61 @@
                         <li><a href="men">Menu</a></li>
                         <li><a href="">Reviews</a></li>
                         <li><a href="">Reservations</a></li>
-                        <li><a href=""><img src="" alt=""></a></li>
+                        <li><a href=""><img src="image/Social Icons.png" alt="social media"></a></li>
                     </ul>
                 </nav>
             </div>
         </header>
-        <section id="home" class="section-home">
+        <section id="home" class="section-home cover-background">
             <div class="container">
-                <h1>the right ingredients for the right food</h1>
-                <img src="" alt="">
+                <h1 class="tracery">the right ingredients for the right food</h1>
+                <img src="image/Divider.png" alt="tracery">
                 <div class="home-buttons">
                     <button class="button button--dark">BOOK A TABLE</button>
                     <button class="button button--light">SEE THE MENU</button>
                 </div>
             </div>
         </section>
-        <section id="abo" class="section-about">
+        <section id="abo" class="section-about cover-background">
             <div class="container">
                 <div class="about-content about-colume">
-                    <h2>just the right food</h2>
+                    <h2 class="tracery">just the right food</h2>
+                    <img src="image/Divider.yellow.png" alt="tracery">
                     <p>If you've been to one of our restaurants, you've seen - and
                         tasted - what keeps our customers coming back for more.
                         Perfect materials and freshly baked food, delicious Lambda
                         cakes, muffins, and gourmet coffes make us hard to resist!
                         Stop in today and check us out!</p>
-                        <img src="" alt="">
+                        <img src="image/Image - Cook.png" alt="photo with a signature">
                 </div>
                 <div class="about-img about-colume">
-                    <img class="img-responsive" src="" alt="">
+                    <img class="img-responsive" src="image/Image - Dish.png" alt="dish">
                 </div>
             </div>
         </section>
-        <section id="ing" class="section-ingredients">
+        <section id="ing" class="section-ingredients cover-background">
             <div class="container">
                 <div class="ingredients-content">
-                    <h2>Fine ingredients</h2>
-                    <img src="" alt="">
+                    <h2 class="tracery">Fine ingredients</h2>
+                    <img src="image/Divider Section - Ingredients.png" alt="tracery">
                     <p>If you've been to one of our restaurants, you've seen - and
                         tasted - what keeps our customers coming back for more.
                         Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet coffees make us hard to resist!
                         Stop in today and check us out!</p>
                     <div class="img-ingredients">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <img src="image/image 3.png" alt="rye">
+                        <img src="image/image 2.png" alt="seasoning">
+                        <img src="image/image 1.png" alt="bread">
                     </div>
                 </div>
             </div>
         </section>
-        <section id="men" class="section-menu">
+        <section id="men" class="section-menu cover-background">
             <div class="container">
                 <div class="menu-column">
                     <div class="menu-dishes">
-                        <h2>Appetisers</h2>
-                        <img src="" alt="">
+                        <h2 class="tracery">Appetisers</h2>
+                        <img src="image/Divider.yellow.png" alt="tracery">
                         <div class="dishes-area">
                             <div class="dishes">
                                 <p class="nomination">Tzatsiki</p><p class="price">$3.99</p>
@@ -89,8 +90,8 @@
                         </div>
                     </div>
                     <div class="menu-dishes">
-                        <h2>Salads</h2>
-                        <img src="" alt="">
+                        <h2 class="tracery">Salads</h2>
+                        <img src="image/Divider.yellow.png" alt="tracery">
                         <div class="dishes-area">
                             <div class="dishes">
                                 <p class="nomination">Olive Special</p><p class="price">$5.99</p>
@@ -110,8 +111,8 @@
                 </div>
                 <div class="menu-column">
                     <div class="menu-dishes">
-                        <h2>Starters</h2>
-                        <img src="" alt="">
+                        <h2 class="tracery">Starters</h2>
+                        <img src="image/Divider.yellow.png" alt="tracery">
                         <div class="dishes-area">
                             <div class="dishes">
                                 <p class="nomination">Haloumi</p><p class="price">$3.99</p>
@@ -124,8 +125,8 @@
                         </div>
                     </div>
                     <div class="menu-dishes">
-                        <h2>Main Dishes</h2>
-                        <img src="" alt="">
+                        <h2 class="tracery">Main Dishes</h2>
+                        <img src="image/Divider.yellow.png" alt="tracery">
                         <div class="dishes-area">
                             <div class="dishes">
                                 <p class="nomination">Cornish Mackerel</p><p class="price">$5.99</p>
@@ -149,11 +150,11 @@
                 </div>
             </div>
         </section>
-        <section class="section-reviews">
+        <section class="section-reviews cover-background">
             <div class="container">
                 <div class="quote">
-                    <h2>Guest Reviews</h2>
-                    <img src="" alt="">
+                    <h2 class="tracery">Guest Reviews</h2>
+                    <img src="image/Divider Section - Ingredients.png" alt="tracery">
                     <p>If you've been to one of our restaurants, you've seen -
                         and tasted - what keeps our customers coming back for
                         more. Perfect materials and freshly baked food,
@@ -163,14 +164,15 @@
                 </div>
             </div>
         </section>
-        <section class="section-reservations">
+        <section class="section-reservations cover-background">
             <div class="container">
                 <div class="reservations-column">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <img src="image/image 2 Section - Reservations.png" alt="dessert with chocolate">
+                    <img src="image/image 1 Section - Reservations.png" alt="dessert with cherry">
                 </div>
                 <div class="reservations-column">
-                    <h2>Just the right food</h2>
+                    <h2 class="tracery">Just the right food</h2>
+                    <img src="image/Divider.yellow.png" alt="tracery">
                     <p>If you've been to one of our restaurants, you've seen - and
                         tasted - what keeps our customers coming back for more.
                         Perfect materials and freshly baked food.</p>
@@ -204,8 +206,8 @@
         </section>
         <footer>
             <div class="footer-column">
-                <h3 class="h-size">About Us</h3>
-                <img src="" alt="">
+                <h3 class="h-size tracery">About Us</h3>
+                <img src="image/Divider Section - Ingredients.png" alt="tracery">
                 <p>Lambda's and expanded Chelsea location
                     represents a truly authentic Greek patisserie,
                     featuring breakfasts of ftesh croissants and
@@ -213,18 +215,18 @@
                     Lamda the best restautant in town</p>
             </div>
             <div class="footer-column">
-                <h3 class="h-size">Opening Hours</h3>
-                <img src="" alt="">
+                <h3 class="h-size tracery">Opening Hours</h3>
+                <img src="image/Divider Section - Ingredients.png" alt="tracery">
                 <p>Mon-Thu: 7:00am-8:00pm
                     Fri-Sun: 7:00am-10:00pm</p>
-                <img src="" alt="">
+                <img src="image/cards.png" alt="payment cards">
             </div>
             <div class="footer-column">
-                <h3 class="h-size">Our Location</h3>
-                <img src="" alt="">
+                <h3 class="h-size tracery">Our Location</h3>
+                <img src="image/Divider Section - Ingredients.png" alt="tracery">
                 <p>19th Paradise Street Sitia
                     128 Meserole Avenue</p>
-                <img src="" alt="">
+                <img src="image/icons.png" alt="social media">
             </div>
         </footer>
     </body>
