--- a/index.html
+++ b/index.html
@@ -7,35 +7,36 @@
     </head>
     <body>
         <header>
-            <div class="container">
+            <!-- <div class="container"> -->
                 <div class="logo">
                     <img class="img-responsive" src="image/logo@2x.png" alt="logotype">
                 </div>
                 <div class="nav-mobile">
-                    <img src="image/image menu.png" alt="menu">
+                    <!-- <img src="image/image menu.png" alt="menu"> -->
+                    <img src="image/menu-icon.png" alt="menu">
                     <div class="nav-mobile-wrapper">
                         <ul>
-                            <li><a href="home">Home</a></li>
-                            <li><a href="abo">About</a></li>
-                            <li><a href="ing">Igredients</a></li>
-                            <li><a href="men">Menu</a></li>
-                            <li><a href="rev">Reviews</a></li>
-                            <li><a href="res">Reservations</a></li>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#abo">About</a></li>
+                            <li><a href="#ing">Igredients</a></li>
+                            <li><a href="#men">Menu</a></li>
+                            <li><a href="#rev">Reviews</a></li>
+                            <li><a href="#res">Reservations</a></li>
                         </ul>
                     </div>
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="home">Home</a></li>
-                        <li><a href="abo">About</a></li>
-                        <li><a href="ing">Igredients</a></li>
-                        <li><a href="men">Menu</a></li>
-                        <li><a href="rev">Reviews</a></li>
-                        <li><a href="res">Reservations</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#abo">About</a></li>
+                        <li><a href="#ing">Igredients</a></li>
+                        <li><a href="#men">Menu</a></li>
+                        <li><a href="#rev">Reviews</a></li>
+                        <li><a href="#res">Reservations</a></li>
                         <li><a class="social" href=""><img src="image/Social Icons.png" alt="social media"></a></li>
                     </ul>
                 </nav>
-            </div>
+            <!-- </div> -->
         </header>
         <section id="home" class="section-home cover-background">
             <div class="container">
@@ -75,7 +76,7 @@
                         Stop in today and check us out!</p>
                     <div class="img-ingredients">
                             <img class="img-responsive" src="image/image 3.png" alt="rye">
-                            <img class="second-ingredient img-responsive" src="image/image 2.png" alt="seasoning">
+                            <img class="img-responsive second-ingredient" src="image/image 2.png" alt="seasoning">
                             <img class="img-responsive" src="image/image 1.png" alt="bread">
                     </div>
                 </div>
